--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ i {
 }
 
 .my-container-border {
-    border-right: 0.05px solid #e7e7e7;
+    border-right: 0.05px solid #e4e4e4;
 }
 
 .my-header-left i {
@@ -130,4 +130,9 @@ footer {
 footer i {
     color: #B1B1B1;
     font-size: 1.5rem;
+}
+
+.my-border-left {
+    border-left: 0.05px solid #e4e4e4;
+
 }
