--- a/css/styles.css
+++ b/css/styles.css
@@ -47,13 +47,13 @@ i {
 }
 
 .my-main-right {
-    height: calc(80vh - 80px);
+    height: calc(80vh - 79px);
     background-image: url('../img/mine.jpg');
     overflow-y: auto;
 }
 
 .my-sent-message {
-    background-color: lightgreen;
+    background-color: #D5F9BA;
     padding: 1rem;
     border-radius: 15px;
 }
